--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--Pastel Colors-->
+    <color name="pastel_light_green">#FF8CB596</color>
+    <color name="pastel_green">#FF718e88</color>
+    <color name="pastel_sand_yellow">#FFDAEAF6</color>
+    <!--
+    <color name="pastel_sand_yellow">#FFFCF5C7</color>-->
+
 </resources>
