--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--Collections List-->
+    <dimen name="collections_title_size">20sp</dimen>
+    <dimen name="collections_description_size">18sp</dimen>
+    <dimen name="collections_recipes_count_size">16sp</dimen>
 </resources>
