--- a/app/src/main/res/layout/collections_row.xml
+++ b/app/src/main/res/layout/collections_row.xml
@@ -19,6 +19,7 @@
         android:textAlignment="center"
         android:textSize="@dimen/collections_title_size"
         android:textStyle="bold"
+        android:textColor="@color/color_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,6 +33,7 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="textStart"
         android:textSize="@dimen/collections_description_size"
+        android:textColor="@color/color_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/collections_row_title"/>
@@ -45,6 +47,7 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="textStart"
         android:textSize="@dimen/collections_recipes_count_size"
+        android:textColor="@color/color_test"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/collections_row_description"/>
