--- a/app/src/main/res/layout/recipe_row.xml
+++ b/app/src/main/res/layout/recipe_row.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp"
+    android:background="@drawable/cell_background_shape"
+    android:elevation="10dp"
+    android:layout_margin="10dp"
     android:id="@+id/recipe_row_layout">
 
     <ImageView
