--- a/app/src/main/res/layout/steps_row.xml
+++ b/app/src/main/res/layout/steps_row.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="textStart"
         android:textSize="@dimen/collections_recipes_count_size"
